// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PanelV2 renders 1`] = `
<PanelV2
  className={null}
  closeButton={
    Object {
      "isDisabled": false,
      "onClick": [Function],
    }
  }
  focusTrap={true}
  isOpen={true}
  labels={Object {}}
  primaryButton={
    Object {
      "isDisabled": false,
      "onClick": [Function],
    }
  }
  secondaryButton={
    Object {
      "isDisabled": false,
      "onClick": [Function],
    }
  }
  stopPropagation={false}
  subtitle="Label"
  title="Label"
>
  <Transition
    className="security--panel"
    component={[Function]}
    timeout={160}
  >
    <CSSTransitionGroup
      className="security--transition"
      component={[Function]}
      transitionAppear={true}
      transitionAppearTimeout={160}
      transitionEnter={true}
      transitionEnterTimeout={160}
      transitionLeave={true}
      transitionLeaveTimeout={160}
      transitionName={
        Object {
          "appear": "security--panel__transition--appear",
          "appearActive": "security--panel__transition--appear--active",
          "enter": "security--panel__transition--enter",
          "enterActive": "security--panel__transition--enter--active",
          "leave": "security--panel__transition--leave",
          "leaveActive": "security--panel__transition--leave--active",
        }
      }
    >
      <TransitionGroup
        childFactory={[Function]}
        className="security--transition"
        component={[Function]}
        transitionAppear={true}
        transitionAppearTimeout={160}
        transitionEnter={true}
        transitionEnterTimeout={160}
        transitionLeave={true}
        transitionLeaveTimeout={160}
        transitionName={
          Object {
            "appear": "security--panel__transition--appear",
            "appearActive": "security--panel__transition--appear--active",
            "enter": "security--panel__transition--enter",
            "enterActive": "security--panel__transition--enter--active",
            "leave": "security--panel__transition--leave",
            "leaveActive": "security--panel__transition--leave--active",
          }
        }
      >
        <component
          className="security--transition"
        >
          <CSSTransitionGroupChild
            appear={true}
            appearTimeout={160}
            enter={true}
            enterTimeout={160}
            key=".$.0"
            leave={true}
            leaveTimeout={160}
            name={
              Object {
                "appear": "security--panel__transition--appear",
                "appearActive": "security--panel__transition--appear--active",
                "enter": "security--panel__transition--enter",
                "enterActive": "security--panel__transition--enter--active",
                "leave": "security--panel__transition--leave",
                "leaveActive": "security--panel__transition--leave--active",
              }
            }
          >
            <Portal
              focusTrap={true}
              hasOverlay={true}
              initialFocus={null}
              key=".0"
              rootNode={
                <body
                  class="security--portal__container security--panel__container"
                >
                  <section
                    class="security--panel security--panel__transition--appear"
                  >
                    <header
                      class="security--panel__header"
                    >
                      <div
                        class="security--panel__header__container--title"
                      >
                        <div
                          class="security--panel__header--title"
                        >
                          Label
                        </div>
                        <div
                          class="security--panel__header--subtitle"
                        >
                          Label
                        </div>
                      </div>
                      <button
                        aria-label="Close"
                        class="security--button--icon security--panel__button--close"
                      >
                        <svg
                          aria-hidden="true"
                          class="security--icon"
                          focusable="false"
                          height="20"
                          preserveAspectRatio="xMidYMid meet"
                          style="will-change: transform;"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4l6.6 6.6L8 22.6 9.4 24l6.6-6.6 6.6 6.6 1.4-1.4-6.6-6.6L24 9.4z"
                          />
                        </svg>
                      </button>
                    </header>
                    <section
                      class="security--panel__body security--panel__body--footer"
                      style="margin-top: 0px;"
                    >
                      <div
                        class="security--panel__body--content"
                        role="tabpanel"
                        tabindex="0"
                      >
                        Label
                      </div>
                    </section>
                    <footer
                      class="security--panel__footer"
                    >
                      <button
                        class="security--button security--panel__footer__button security--panel__footer__button--secondary bx--btn bx--btn--secondary"
                        tabindex="0"
                        type="button"
                      >
                        
                      </button>
                      <button
                        class="security--button security--panel__footer__button bx--btn bx--btn--primary"
                        tabindex="0"
                        type="button"
                      >
                        
                      </button>
                    </footer>
                  </section>
                  <div
                    class="security--portal__overlay"
                    tabindex="-1"
                  />
                </body>
              }
              stopPropagation={false}
            >
              <Portal
                containerInfo={
                  <body
                    class="security--portal__container security--panel__container"
                  >
                    <section
                      class="security--panel security--panel__transition--appear"
                    >
                      <header
                        class="security--panel__header"
                      >
                        <div
                          class="security--panel__header__container--title"
                        >
                          <div
                            class="security--panel__header--title"
                          >
                            Label
                          </div>
                          <div
                            class="security--panel__header--subtitle"
                          >
                            Label
                          </div>
                        </div>
                        <button
                          aria-label="Close"
                          class="security--button--icon security--panel__button--close"
                        >
                          <svg
                            aria-hidden="true"
                            class="security--icon"
                            focusable="false"
                            height="20"
                            preserveAspectRatio="xMidYMid meet"
                            style="will-change: transform;"
                            viewBox="0 0 32 32"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4l6.6 6.6L8 22.6 9.4 24l6.6-6.6 6.6 6.6 1.4-1.4-6.6-6.6L24 9.4z"
                            />
                          </svg>
                        </button>
                      </header>
                      <section
                        class="security--panel__body security--panel__body--footer"
                        style="margin-top: 0px;"
                      >
                        <div
                          class="security--panel__body--content"
                          role="tabpanel"
                          tabindex="0"
                        >
                          Label
                        </div>
                      </section>
                      <footer
                        class="security--panel__footer"
                      >
                        <button
                          class="security--button security--panel__footer__button security--panel__footer__button--secondary bx--btn bx--btn--secondary"
                          tabindex="0"
                          type="button"
                        >
                          
                        </button>
                        <button
                          class="security--button security--panel__footer__button bx--btn bx--btn--primary"
                          tabindex="0"
                          type="button"
                        >
                          
                        </button>
                      </footer>
                    </section>
                    <div
                      class="security--portal__overlay"
                      tabindex="-1"
                    />
                  </body>
                }
              >
                <FocusTrap
                  _createFocusTrap={[Function]}
                  active={true}
                  focusTrapOptions={
                    Object {
                      "initialFocus": null,
                    }
                  }
                  paused={false}
                >
                  <section
                    className="security--panel"
                  >
                    <header
                      className="security--panel__header"
                    >
                      <div
                        className="security--panel__header__container--title"
                      >
                        <div
                          className="security--panel__header--title"
                        >
                          Label
                        </div>
                        <div
                          className="security--panel__header--subtitle"
                        >
                          Label
                        </div>
                      </div>
                      <IconButton
                        className="security--panel__button--close"
                        iconClassName=""
                        iconSize={20}
                        label="Close"
                        onClick={[Function]}
                        path={null}
                        renderIcon={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "render": [Function],
                          }
                        }
                        size={null}
                        state={false}
                        tooltip={false}
                        tooltipDirection="bottom"
                      >
                        <button
                          aria-label="Close"
                          className="security--button--icon security--panel__button--close"
                          onClick={[Function]}
                        >
                          <Icon
                            className=""
                            height={null}
                            path={null}
                            renderIcon={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "render": [Function],
                              }
                            }
                            size={20}
                            viewBox="0 0 32 32"
                            width={null}
                          >
                            <ForwardRef(Close20)
                              aria-hidden={true}
                              className="security--icon"
                              focusable={false}
                              preserveAspectRatio="xMidYMid meet"
                              style={
                                Object {
                                  "willChange": "transform",
                                }
                              }
                            >
                              <Icon
                                aria-hidden={true}
                                className="security--icon"
                                focusable={false}
                                height={20}
                                preserveAspectRatio="xMidYMid meet"
                                style={
                                  Object {
                                    "willChange": "transform",
                                  }
                                }
                                viewBox="0 0 32 32"
                                width={20}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <svg
                                  aria-hidden={true}
                                  className="security--icon"
                                  focusable={false}
                                  height={20}
                                  preserveAspectRatio="xMidYMid meet"
                                  style={
                                    Object {
                                      "willChange": "transform",
                                    }
                                  }
                                  viewBox="0 0 32 32"
                                  width={20}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4l6.6 6.6L8 22.6 9.4 24l6.6-6.6 6.6 6.6 1.4-1.4-6.6-6.6L24 9.4z"
                                  />
                                </svg>
                              </Icon>
                            </ForwardRef(Close20)>
                          </Icon>
                        </button>
                      </IconButton>
                    </header>
                    <section
                      className="security--panel__body security--panel__body--footer"
                      style={
                        Object {
                          "marginTop": "0px",
                        }
                      }
                    >
                      <PanelContent>
                        <div
                          className="security--panel__body--content"
                          role="tabpanel"
                          tabIndex="0"
                        >
                          Label
                        </div>
                      </PanelContent>
                    </section>
                    <footer
                      className="security--panel__footer"
                    >
                      <Button
                        className="security--panel__footer__button security--panel__footer__button--secondary"
                        disabled={false}
                        kind="secondary"
                        largeText={null}
                        onClick={[Function]}
                        tabIndex={0}
                        type="button"
                      >
                        <ForwardRef(Button)
                          className="security--button security--panel__footer__button security--panel__footer__button--secondary"
                          disabled={false}
                          kind="secondary"
                          onClick={[Function]}
                          tabIndex={0}
                          type="button"
                        >
                          <button
                            className="security--button security--panel__footer__button security--panel__footer__button--secondary bx--btn bx--btn--secondary"
                            disabled={false}
                            onClick={[Function]}
                            tabIndex={0}
                            type="button"
                          />
                        </ForwardRef(Button)>
                      </Button>
                      <Button
                        className="security--panel__footer__button"
                        disabled={false}
                        kind="primary"
                        largeText={null}
                        onClick={[Function]}
                        tabIndex={0}
                        type="button"
                      >
                        <ForwardRef(Button)
                          className="security--button security--panel__footer__button"
                          disabled={false}
                          kind="primary"
                          onClick={[Function]}
                          tabIndex={0}
                          type="button"
                        >
                          <button
                            className="security--button security--panel__footer__button bx--btn bx--btn--primary"
                            disabled={false}
                            onClick={[Function]}
                            tabIndex={0}
                            type="button"
                          />
                        </ForwardRef(Button)>
                      </Button>
                    </footer>
                  </section>
                </FocusTrap>
              </Portal>
            </Portal>
          </CSSTransitionGroupChild>
        </component>
      </TransitionGroup>
    </CSSTransitionGroup>
  </Transition>
</PanelV2>
`;

exports[`PanelV2 renders disabled buttons 1`] = `
<PanelV2
  className={null}
  closeButton={
    Object {
      "isDisabled": true,
      "onClick": [Function],
    }
  }
  focusTrap={true}
  isOpen={true}
  labels={Object {}}
  primaryButton={
    Object {
      "isDisabled": true,
      "onClick": [Function],
    }
  }
  secondaryButton={
    Object {
      "isDisabled": true,
      "onClick": [Function],
    }
  }
  stopPropagation={false}
  subtitle="Label"
  title="Label"
>
  <Transition
    className="security--panel"
    component={[Function]}
    timeout={160}
  >
    <CSSTransitionGroup
      className="security--transition"
      component={[Function]}
      transitionAppear={true}
      transitionAppearTimeout={160}
      transitionEnter={true}
      transitionEnterTimeout={160}
      transitionLeave={true}
      transitionLeaveTimeout={160}
      transitionName={
        Object {
          "appear": "security--panel__transition--appear",
          "appearActive": "security--panel__transition--appear--active",
          "enter": "security--panel__transition--enter",
          "enterActive": "security--panel__transition--enter--active",
          "leave": "security--panel__transition--leave",
          "leaveActive": "security--panel__transition--leave--active",
        }
      }
    >
      <TransitionGroup
        childFactory={[Function]}
        className="security--transition"
        component={[Function]}
        transitionAppear={true}
        transitionAppearTimeout={160}
        transitionEnter={true}
        transitionEnterTimeout={160}
        transitionLeave={true}
        transitionLeaveTimeout={160}
        transitionName={
          Object {
            "appear": "security--panel__transition--appear",
            "appearActive": "security--panel__transition--appear--active",
            "enter": "security--panel__transition--enter",
            "enterActive": "security--panel__transition--enter--active",
            "leave": "security--panel__transition--leave",
            "leaveActive": "security--panel__transition--leave--active",
          }
        }
      >
        <component
          className="security--transition"
        >
          <CSSTransitionGroupChild
            appear={true}
            appearTimeout={160}
            enter={true}
            enterTimeout={160}
            key=".$.0"
            leave={true}
            leaveTimeout={160}
            name={
              Object {
                "appear": "security--panel__transition--appear",
                "appearActive": "security--panel__transition--appear--active",
                "enter": "security--panel__transition--enter",
                "enterActive": "security--panel__transition--enter--active",
                "leave": "security--panel__transition--leave",
                "leaveActive": "security--panel__transition--leave--active",
              }
            }
          >
            <Portal
              focusTrap={true}
              hasOverlay={true}
              initialFocus={null}
              key=".0"
              rootNode={
                <body
                  class=""
                >
                  <section
                    class="security--panel security--panel__transition--appear"
                  >
                    <header
                      class="security--panel__header"
                    >
                      <div
                        class="security--panel__header__container--title"
                      >
                        <div
                          class="security--panel__header--title"
                        >
                          Label
                        </div>
                        <div
                          class="security--panel__header--subtitle"
                        >
                          Label
                        </div>
                      </div>
                      <button
                        aria-label="Close"
                        class="security--button--icon security--panel__button--close"
                      >
                        <svg
                          aria-hidden="true"
                          class="security--icon"
                          focusable="false"
                          height="20"
                          preserveAspectRatio="xMidYMid meet"
                          style="will-change: transform;"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4l6.6 6.6L8 22.6 9.4 24l6.6-6.6 6.6 6.6 1.4-1.4-6.6-6.6L24 9.4z"
                          />
                        </svg>
                      </button>
                    </header>
                    <section
                      class="security--panel__body security--panel__body--footer"
                      style="margin-top: 0px;"
                    >
                      <div
                        class="security--panel__body--content"
                        role="tabpanel"
                        tabindex="0"
                      >
                        Label
                      </div>
                    </section>
                    <footer
                      class="security--panel__footer"
                    >
                      <button
                        class="security--button security--panel__footer__button security--panel__footer__button--secondary bx--btn bx--btn--secondary"
                        tabindex="0"
                        type="button"
                      >
                        
                      </button>
                      <button
                        class="security--button security--panel__footer__button bx--btn bx--btn--primary"
                        tabindex="0"
                        type="button"
                      >
                        
                      </button>
                    </footer>
                  </section>
                  <div
                    class="security--portal__overlay"
                    tabindex="-1"
                  />
                  <section
                    class="security--panel security--panel__transition--appear"
                  >
                    <header
                      class="security--panel__header"
                    >
                      <div
                        class="security--panel__header__container--title"
                      >
                        <div
                          class="security--panel__header--title"
                        >
                          Label
                        </div>
                        <div
                          class="security--panel__header--subtitle"
                        >
                          Label
                        </div>
                      </div>
                      <button
                        aria-label="Close"
                        class="security--button--icon security--panel__button--close"
                      >
                        <svg
                          aria-hidden="true"
                          class="security--icon"
                          focusable="false"
                          height="20"
                          preserveAspectRatio="xMidYMid meet"
                          style="will-change: transform;"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4l6.6 6.6L8 22.6 9.4 24l6.6-6.6 6.6 6.6 1.4-1.4-6.6-6.6L24 9.4z"
                          />
                        </svg>
                      </button>
                    </header>
                    <section
                      class="security--panel__body security--panel__body--footer"
                      style="margin-top: 0px;"
                    >
                      <div
                        class="security--panel__body--content"
                        role="tabpanel"
                        tabindex="0"
                      >
                        Label
                      </div>
                    </section>
                    <footer
                      class="security--panel__footer"
                    >
                      <button
                        class="security--button security--panel__footer__button security--panel__footer__button--secondary bx--btn bx--btn--secondary bx--btn--disabled"
                        disabled=""
                        tabindex="0"
                        type="button"
                      >
                        
                      </button>
                      <button
                        class="security--button security--panel__footer__button bx--btn bx--btn--primary bx--btn--disabled"
                        disabled=""
                        tabindex="0"
                        type="button"
                      >
                        
                      </button>
                    </footer>
                  </section>
                  <div
                    class="security--portal__overlay"
                    tabindex="-1"
                  />
                </body>
              }
              stopPropagation={false}
            >
              <Portal
                containerInfo={
                  <body
                    class=""
                  >
                    <section
                      class="security--panel security--panel__transition--appear"
                    >
                      <header
                        class="security--panel__header"
                      >
                        <div
                          class="security--panel__header__container--title"
                        >
                          <div
                            class="security--panel__header--title"
                          >
                            Label
                          </div>
                          <div
                            class="security--panel__header--subtitle"
                          >
                            Label
                          </div>
                        </div>
                        <button
                          aria-label="Close"
                          class="security--button--icon security--panel__button--close"
                        >
                          <svg
                            aria-hidden="true"
                            class="security--icon"
                            focusable="false"
                            height="20"
                            preserveAspectRatio="xMidYMid meet"
                            style="will-change: transform;"
                            viewBox="0 0 32 32"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4l6.6 6.6L8 22.6 9.4 24l6.6-6.6 6.6 6.6 1.4-1.4-6.6-6.6L24 9.4z"
                            />
                          </svg>
                        </button>
                      </header>
                      <section
                        class="security--panel__body security--panel__body--footer"
                        style="margin-top: 0px;"
                      >
                        <div
                          class="security--panel__body--content"
                          role="tabpanel"
                          tabindex="0"
                        >
                          Label
                        </div>
                      </section>
                      <footer
                        class="security--panel__footer"
                      >
                        <button
                          class="security--button security--panel__footer__button security--panel__footer__button--secondary bx--btn bx--btn--secondary"
                          tabindex="0"
                          type="button"
                        >
                          
                        </button>
                        <button
                          class="security--button security--panel__footer__button bx--btn bx--btn--primary"
                          tabindex="0"
                          type="button"
                        >
                          
                        </button>
                      </footer>
                    </section>
                    <div
                      class="security--portal__overlay"
                      tabindex="-1"
                    />
                    <section
                      class="security--panel security--panel__transition--appear"
                    >
                      <header
                        class="security--panel__header"
                      >
                        <div
                          class="security--panel__header__container--title"
                        >
                          <div
                            class="security--panel__header--title"
                          >
                            Label
                          </div>
                          <div
                            class="security--panel__header--subtitle"
                          >
                            Label
                          </div>
                        </div>
                        <button
                          aria-label="Close"
                          class="security--button--icon security--panel__button--close"
                        >
                          <svg
                            aria-hidden="true"
                            class="security--icon"
                            focusable="false"
                            height="20"
                            preserveAspectRatio="xMidYMid meet"
                            style="will-change: transform;"
                            viewBox="0 0 32 32"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4l6.6 6.6L8 22.6 9.4 24l6.6-6.6 6.6 6.6 1.4-1.4-6.6-6.6L24 9.4z"
                            />
                          </svg>
                        </button>
                      </header>
                      <section
                        class="security--panel__body security--panel__body--footer"
                        style="margin-top: 0px;"
                      >
                        <div
                          class="security--panel__body--content"
                          role="tabpanel"
                          tabindex="0"
                        >
                          Label
                        </div>
                      </section>
                      <footer
                        class="security--panel__footer"
                      >
                        <button
                          class="security--button security--panel__footer__button security--panel__footer__button--secondary bx--btn bx--btn--secondary bx--btn--disabled"
                          disabled=""
                          tabindex="0"
                          type="button"
                        >
                          
                        </button>
                        <button
                          class="security--button security--panel__footer__button bx--btn bx--btn--primary bx--btn--disabled"
                          disabled=""
                          tabindex="0"
                          type="button"
                        >
                          
                        </button>
                      </footer>
                    </section>
                    <div
                      class="security--portal__overlay"
                      tabindex="-1"
                    />
                  </body>
                }
              >
                <FocusTrap
                  _createFocusTrap={[Function]}
                  active={true}
                  focusTrapOptions={
                    Object {
                      "initialFocus": null,
                    }
                  }
                  paused={false}
                >
                  <section
                    className="security--panel"
                  >
                    <header
                      className="security--panel__header"
                    >
                      <div
                        className="security--panel__header__container--title"
                      >
                        <div
                          className="security--panel__header--title"
                        >
                          Label
                        </div>
                        <div
                          className="security--panel__header--subtitle"
                        >
                          Label
                        </div>
                      </div>
                      <IconButton
                        className="security--panel__button--close"
                        iconClassName=""
                        iconSize={20}
                        label="Close"
                        onClick={[Function]}
                        path={null}
                        renderIcon={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "render": [Function],
                          }
                        }
                        size={null}
                        state={false}
                        tooltip={false}
                        tooltipDirection="bottom"
                      >
                        <button
                          aria-label="Close"
                          className="security--button--icon security--panel__button--close"
                          onClick={[Function]}
                        >
                          <Icon
                            className=""
                            height={null}
                            path={null}
                            renderIcon={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "render": [Function],
                              }
                            }
                            size={20}
                            viewBox="0 0 32 32"
                            width={null}
                          >
                            <ForwardRef(Close20)
                              aria-hidden={true}
                              className="security--icon"
                              focusable={false}
                              preserveAspectRatio="xMidYMid meet"
                              style={
                                Object {
                                  "willChange": "transform",
                                }
                              }
                            >
                              <Icon
                                aria-hidden={true}
                                className="security--icon"
                                focusable={false}
                                height={20}
                                preserveAspectRatio="xMidYMid meet"
                                style={
                                  Object {
                                    "willChange": "transform",
                                  }
                                }
                                viewBox="0 0 32 32"
                                width={20}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <svg
                                  aria-hidden={true}
                                  className="security--icon"
                                  focusable={false}
                                  height={20}
                                  preserveAspectRatio="xMidYMid meet"
                                  style={
                                    Object {
                                      "willChange": "transform",
                                    }
                                  }
                                  viewBox="0 0 32 32"
                                  width={20}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4l6.6 6.6L8 22.6 9.4 24l6.6-6.6 6.6 6.6 1.4-1.4-6.6-6.6L24 9.4z"
                                  />
                                </svg>
                              </Icon>
                            </ForwardRef(Close20)>
                          </Icon>
                        </button>
                      </IconButton>
                    </header>
                    <section
                      className="security--panel__body security--panel__body--footer"
                      style={
                        Object {
                          "marginTop": "0px",
                        }
                      }
                    >
                      <PanelContent>
                        <div
                          className="security--panel__body--content"
                          role="tabpanel"
                          tabIndex="0"
                        >
                          Label
                        </div>
                      </PanelContent>
                    </section>
                    <footer
                      className="security--panel__footer"
                    >
                      <Button
                        className="security--panel__footer__button security--panel__footer__button--secondary"
                        disabled={true}
                        kind="secondary"
                        largeText={null}
                        onClick={[Function]}
                        tabIndex={0}
                        type="button"
                      >
                        <ForwardRef(Button)
                          className="security--button security--panel__footer__button security--panel__footer__button--secondary"
                          disabled={true}
                          kind="secondary"
                          onClick={[Function]}
                          tabIndex={0}
                          type="button"
                        >
                          <button
                            className="security--button security--panel__footer__button security--panel__footer__button--secondary bx--btn bx--btn--secondary bx--btn--disabled"
                            disabled={true}
                            onClick={[Function]}
                            tabIndex={0}
                            type="button"
                          />
                        </ForwardRef(Button)>
                      </Button>
                      <Button
                        className="security--panel__footer__button"
                        disabled={true}
                        kind="primary"
                        largeText={null}
                        onClick={[Function]}
                        tabIndex={0}
                        type="button"
                      >
                        <ForwardRef(Button)
                          className="security--button security--panel__footer__button"
                          disabled={true}
                          kind="primary"
                          onClick={[Function]}
                          tabIndex={0}
                          type="button"
                        >
                          <button
                            className="security--button security--panel__footer__button bx--btn bx--btn--primary bx--btn--disabled"
                            disabled={true}
                            onClick={[Function]}
                            tabIndex={0}
                            type="button"
                          />
                        </ForwardRef(Button)>
                      </Button>
                    </footer>
                  </section>
                </FocusTrap>
              </Portal>
            </Portal>
          </CSSTransitionGroupChild>
        </component>
      </TransitionGroup>
    </CSSTransitionGroup>
  </Transition>
</PanelV2>
`;
